--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
-    <title>Cocktails recipes</title>
+    <title>Photo gallery</title>
   </head>
   <body>
     <div id="root"></div>
